[gd_scene load_steps=9 format=4 uid="uid://b8y2q8x7k4l3"]

[ext_resource type="Script" uid="uid://ud1gywebnmn" path="res://scripts/Game.gd" id="1_game"]
[ext_resource type="Script" uid="uid://dcehsdkw06ukw" path="res://scripts/MapManager.gd" id="2_map"]
[ext_resource type="Script" uid="uid://ct7vwy5a7x4vd" path="res://scripts/WaveManager.gd" id="3_wave"]
[ext_resource type="Script" uid="uid://ik5lngdrgkkt" path="res://scripts/UI/HUD.gd" id="4_hud"]
[ext_resource type="Environment" uid="uid://dak3r8x7k5m6" path="res://resources/CyberEnvironment.tres" id="5_env"]
[ext_resource type="PackedScene" uid="uid://boxh51mgon0b5" path="res://scenes/GameMap.tscn" id="6_gamemap"]
[ext_resource type="PackedScene" path="res://scenes/Towers/GhostTower.tscn" id="7_ghost"]

[sub_resource type="Curve2D" id="Curve2D_path"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 11, 140, 0, 0, 0, 0, 299, 141, 0, 0, 0, 0, 302, 702, 0, 0, 0, 0, 698, 703, 0, 0, 0, 0, 701, 818, 0, 0, 0, 0, 987, 819, 0, 0, 0, 0, 979, 418, 0, 0, 0, 0, 1916, 422)
}
point_count = 8

[node name="Game" type="Node2D"]
script = ExtResource("1_game")
ghost_tower_scene = ExtResource("7_ghost")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_env")

[node name="MapManager" type="Node2D" parent="."]
script = ExtResource("2_map")

[node name="GameMap" parent="MapManager" instance=ExtResource("6_gamemap")]
tile_map_data = PackedByteArray("AAAAAAMAAAABAAQAAAABAAMAAAABAAQAAAACAAMAAAABAAQAAAADAAMAAAABAAQAAAAEAAMAAAABAAQAAAAFAAMAAAABAAQAAAAGAAMAAAABAAQAAAAHAAMAAAABAAQAAAAHAAQAAAABAAQAAAAHAAUAAAABAAQAAAAHAAYAAAABAAoAAAAHAAcAAAABAAQAAAAHAAgAAAABAAQAAAAHAAkAAAABAAQAAAAHAAoAAAABAAQAAAAHAAsAAAABAAQAAAAHAAwAAAABAAQAAAAHAA0AAAABAAQAAAAHAA4AAAABAAQAAAAHAA8AAAABAAQAAAAHABAAAAABAAQAAAAHABEAAAABAAQAAAAIABEAAAABAAQAAAAJABEAAAABAAQAAAAKABEAAAABAAQAAAALABEAAAABAAQAAAAMABEAAAABAAQAAAANABEAAAABAAQAAAAOABEAAAABAAQAAAAPABEAAAABAAQAAAAQABEAAAABAAQAAAARABEAAAABAAQAAAARABIAAAABAAQAAAARABMAAAABAAQAAAARABQAAAABAAQAAAASABQAAAABAAQAAAATABQAAAABAAQAAAAUABQAAAABAAQAAAAVABQAAAABAAQAAAAWABQAAAABAAQAAAAXABQAAAABAAQAAAAYABQAAAABAAQAAAAYABMAAAABAAQAAAAYABIAAAABAAQAAAAYABEAAAABAAQAAAAYABAAAAABAAQAAAAYAA8AAAABAAQAAAAYAA4AAAABAAQAAAAYAA0AAAABAAQAAAAYAAwAAAABAAQAAAAYAAsAAAABAAQAAAAYAAoAAAABAAQAAAAZAAoAAAABAAQAAAAaAAoAAAABAAQAAAAbAAoAAAABAAQAAAAcAAoAAAABAAQAAAAdAAoAAAABAAQAAAAeAAoAAAABAAQAAAAfAAoAAAABAAQAAAAgAAoAAAABAAQAAAAhAAoAAAABAAQAAAAiAAoAAAABAAQAAAAjAAoAAAABAAQAAAAkAAoAAAABAAQAAAAlAAoAAAABAAQAAAAmAAoAAAABAAQAAAAnAAoAAAABAAQAAAAoAAoAAAABAAQAAAApAAoAAAABAAQAAAAqAAoAAAABAAQAAAArAAoAAAABAAQAAAAsAAoAAAABAAQAAAAtAAoAAAABAAQAAAAuAAoAAAABAAQAAAAvAAoAAAABAAQAAAAKAAYAAAAGAAEAAAAKAAcAAAAGAAEAAAAKAAgAAAAGAAEAAAAKAAkAAAAGAAEAAAAKAAoAAAAGAAEAAAALAAYAAAAGAAEAAAALAAcAAAAGAAEAAAALAAgAAAAGAAEAAAALAAkAAAAGAAEAAAALAAoAAAAGAAEAAAAMAAYAAAAGAAEAAAAMAAcAAAAGAAEAAAAMAAgAAAAGAAEAAAAMAAkAAAAGAAEAAAAMAAoAAAAGAAEAAAANAAYAAAAGAAEAAAANAAcAAAAGAAEAAAANAAgAAAAGAAEAAAANAAkAAAAGAAEAAAANAAoAAAAGAAEAAAAOAAYAAAAGAAEAAAAOAAcAAAAGAAEAAAAOAAgAAAAGAAEAAAAOAAkAAAAGAAEAAAAOAAoAAAAGAAEAAAALAAsAAAALAAoAAAALAAwAAAALAAoAAAAMAAsAAAALAAoAAAAMAAwAAAALAAoAAAANAAsAAAALAAoAAAANAAwAAAALAAoAAAAMAA0AAAALAAoAAAAMAA4AAAALAAoAAAANAA0AAAALAAoAAAANAA4AAAALAAoAAAAOAA0AAAALAAoAAAAOAA4AAAALAAoAAAAPAA0AAAALAAoAAAAPAA4AAAALAAoAAAAQAA0AAAALAAoAAAAQAA4AAAALAAoAAAARAA0AAAALAAoAAAARAA4AAAALAAoAAAASAA0AAAALAAoAAAASAA4AAAALAAoAAAATAA0AAAALAAoAAAATAA4AAAALAAoAAAAUAA0AAAALAAoAAAAUAA4AAAALAAoAAAAdAA0AAAAGAAQAAAAdAA4AAAAGAAQAAAAdAA8AAAAGAAQAAAAdABAAAAAGAAQAAAAdABEAAAAGAAQAAAAeAA0AAAAGAAQAAAAeAA4AAAAGAAQAAAAeAA8AAAAGAAQAAAAeABAAAAAGAAQAAAAeABEAAAAGAAQAAAAfAA0AAAAGAAQAAAAfAA4AAAAGAAQAAAAfAA8AAAAGAAQAAAAfABAAAAAGAAQAAAAfABEAAAAGAAQAAAAgAA0AAAAGAAQAAAAgAA4AAAAGAAQAAAAgAA8AAAAGAAQAAAAgABAAAAAGAAQAAAAgABEAAAAGAAQAAAAhAA0AAAAGAAQAAAAhAA4AAAAGAAQAAAAhAA8AAAAGAAQAAAAhABAAAAAGAAQAAAAhABEAAAAGAAQAAAAiAA0AAAAGAAQAAAAiAA4AAAAGAAQAAAAiAA8AAAAGAAQAAAAiABAAAAAGAAQAAAAiABEAAAAGAAQAAAAjAA0AAAAGAAQAAAAjAA4AAAAGAAQAAAAjAA8AAAAGAAQAAAAjABAAAAAGAAQAAAAjABEAAAAGAAQAAAAkAA0AAAAGAAQAAAAkAA4AAAAGAAQAAAAkAA8AAAAGAAQAAAAkABAAAAAGAAQAAAAkABEAAAAGAAQAAAAlAA0AAAAGAAQAAAAlAA4AAAAGAAQAAAAlAA8AAAAGAAQAAAAlABAAAAAGAAQAAAAlABEAAAAGAAQAAAAmAA0AAAAGAAQAAAAmAA4AAAAGAAQAAAAmAA8AAAAGAAQAAAAmABAAAAAGAAQAAAAmABEAAAAGAAQAAAAVAAYAAAABAAcAAAAVAAUAAAABAAcAAAAVAAQAAAABAAcAAAAVAAMAAAABAAcAAAAUAAMAAAABAAcAAAATAAMAAAABAAcAAAASAAMAAAABAAcAAAARAAMAAAABAAcAAAAQAAMAAAABAAcAAAAPAAMAAAABAAcAAAAOAAMAAAABAAcAAAANAAMAAAABAAcAAAAMAAMAAAABAAcAAAALAAMAAAABAAcAAAAKAAMAAAABAAcAAAAJAAMAAAABAAcAAAAIAAMAAAABAAcAAAAIAAQAAAABAAcAAAAIAAUAAAABAAcAAAAIAAYAAAABAAcAAAAIAAcAAAABAAcAAAAIAAgAAAABAAcAAAAIAAkAAAABAAcAAAAIAAoAAAABAAcAAAAIAAsAAAABAAcAAAAIAAwAAAABAAcAAAAIAA0AAAABAAcAAAAIAA4AAAABAAcAAAAIAA8AAAABAAcAAAAIABAAAAABAAcAAAAJABAAAAABAAcAAAAJAA8AAAABAAcAAAAJAA4AAAABAAcAAAAJAA0AAAABAAcAAAAJAAwAAAABAAcAAAAJAAsAAAABAAcAAAAJAAoAAAABAAcAAAAJAAkAAAABAAcAAAAJAAgAAAABAAcAAAAJAAcAAAABAAcAAAAJAAYAAAABAAcAAAAJAAUAAAABAAcAAAAJAAQAAAABAAcAAAAKAAQAAAABAAcAAAAKAAUAAAABAAcAAAALAAUAAAABAAcAAAALAAQAAAABAAcAAAAMAAQAAAABAAcAAAAMAAUAAAABAAcAAAANAAUAAAABAAcAAAANAAQAAAABAAcAAAAOAAQAAAABAAcAAAAOAAUAAAABAAcAAAAPAAUAAAABAAcAAAAPAAQAAAABAAcAAAAQAAQAAAABAAcAAAAQAAUAAAABAAcAAAAQAAYAAAABAAcAAAAPAAYAAAABAAcAAAAPAAcAAAABAAcAAAAPAAgAAAABAAcAAAAPAAkAAAABAAcAAAAPAAoAAAABAAcAAAAPAAsAAAABAAcAAAAOAAsAAAABAAcAAAAOAAwAAAABAAcAAAAPAAwAAAABAAcAAAAQAAwAAAABAAcAAAAQAAsAAAABAAcAAAAQAAoAAAABAAcAAAAQAAkAAAABAAcAAAAQAAgAAAABAAcAAAAQAAcAAAABAAcAAAARAAcAAAABAAcAAAARAAYAAAABAAcAAAARAAUAAAABAAcAAAARAAQAAAABAAcAAAASAAQAAAABAAcAAAASAAUAAAABAAcAAAASAAYAAAABAAcAAAASAAcAAAABAAcAAAASAAgAAAABAAcAAAARAAgAAAABAAcAAAARAAkAAAABAAcAAAARAAoAAAABAAcAAAARAAsAAAABAAcAAAARAAwAAAABAAcAAAASAAwAAAABAAcAAAASAAsAAAABAAcAAAASAAoAAAABAAcAAAASAAkAAAABAAcAAAATAAkAAAABAAcAAAATAAgAAAABAAcAAAATAAcAAAABAAcAAAATAAYAAAABAAcAAAATAAUAAAABAAcAAAATAAQAAAABAAcAAAAUAAQAAAABAAcAAAAUAAUAAAABAAcAAAAUAAYAAAABAAcAAAAUAAcAAAABAAcAAAAUAAgAAAABAAcAAAAUAAkAAAABAAcAAAAUAAoAAAABAAcAAAATAAoAAAABAAcAAAATAAsAAAABAAcAAAATAAwAAAABAAcAAAAUAAwAAAABAAcAAAAUAAsAAAABAAcAAAAVAAsAAAABAAcAAAAVAAoAAAABAAcAAAAVAAkAAAABAAcAAAAVAAgAAAABAAcAAAAVAAcAAAABAAcAAAAWAAcAAAABAAcAAAAWAAYAAAABAAcAAAAWAAUAAAABAAcAAAAWAAQAAAABAAcAAAAWAAMAAAABAAcAAAAXAAMAAAABAAcAAAAXAAQAAAABAAcAAAAXAAUAAAABAAcAAAAXAAYAAAABAAcAAAAXAAcAAAABAAcAAAAXAAgAAAABAAcAAAAWAAgAAAABAAcAAAAWAAkAAAABAAcAAAAWAAoAAAABAAcAAAAWAAsAAAABAAcAAAAWAAwAAAABAAcAAAAVAAwAAAABAAcAAAAVAA0AAAABAAcAAAAVAA4AAAABAAcAAAAVAA8AAAABAAcAAAAUAA8AAAABAAcAAAATAA8AAAABAAcAAAASAA8AAAABAAcAAAARAA8AAAABAAcAAAAQAA8AAAABAAcAAAAPAA8AAAABAAcAAAAOAA8AAAABAAcAAAANAA8AAAABAAcAAAAMAA8AAAABAAcAAAALAA8AAAABAAcAAAALAA4AAAABAAcAAAALAA0AAAABAAcAAAAKAA0AAAABAAcAAAAKAAwAAAABAAcAAAAKAAsAAAABAAcAAAAKAA4AAAABAAcAAAAKAA8AAAABAAcAAAAKABAAAAABAAcAAAALABAAAAABAAcAAAAMABAAAAABAAcAAAANABAAAAABAAcAAAAOABAAAAABAAcAAAAPABAAAAABAAcAAAAQABAAAAABAAcAAAARABAAAAABAAcAAAASABAAAAABAAcAAAASABEAAAABAAcAAAASABIAAAABAAcAAAASABMAAAABAAcAAAATABMAAAABAAcAAAATABIAAAABAAcAAAATABEAAAABAAcAAAATABAAAAABAAcAAAAUABAAAAABAAcAAAAUABEAAAABAAcAAAAUABIAAAABAAcAAAAUABMAAAABAAcAAAAVABMAAAABAAcAAAAVABIAAAABAAcAAAAVABEAAAABAAcAAAAVABAAAAABAAcAAAAWABAAAAABAAcAAAAWAA8AAAABAAcAAAAWAA4AAAABAAcAAAAWAA0AAAABAAcAAAAXAA0AAAABAAcAAAAXAAwAAAABAAcAAAAXAAsAAAABAAcAAAAXAAoAAAABAAcAAAAXAAkAAAABAAcAAAAYAAkAAAABAAcAAAAYAAgAAAABAAcAAAAYAAcAAAABAAcAAAAYAAYAAAABAAcAAAAYAAUAAAABAAcAAAAYAAQAAAABAAcAAAAYAAMAAAABAAcAAAAZAAMAAAABAAcAAAAZAAQAAAABAAcAAAAZAAUAAAABAAcAAAAZAAYAAAABAAcAAAAZAAcAAAABAAcAAAAZAAgAAAABAAcAAAAZAAkAAAABAAcAAAAaAAkAAAABAAcAAAAaAAgAAAABAAcAAAAaAAcAAAABAAcAAAAaAAYAAAABAAcAAAAaAAUAAAABAAcAAAAaAAQAAAABAAcAAAAaAAMAAAABAAcAAAAbAAMAAAABAAcAAAAbAAQAAAABAAcAAAAbAAUAAAABAAcAAAAbAAYAAAABAAcAAAAbAAcAAAABAAcAAAAbAAgAAAABAAcAAAAbAAkAAAABAAcAAAAcAAkAAAABAAcAAAAcAAgAAAABAAcAAAAcAAcAAAABAAcAAAAcAAYAAAABAAcAAAAcAAUAAAABAAcAAAAcAAQAAAABAAcAAAAcAAMAAAABAAcAAAAdAAMAAAABAAcAAAAdAAQAAAABAAcAAAAdAAUAAAABAAcAAAAdAAYAAAABAAcAAAAdAAcAAAABAAcAAAAdAAgAAAABAAcAAAAdAAkAAAABAAcAAAAeAAkAAAABAAcAAAAeAAgAAAABAAcAAAAeAAcAAAABAAcAAAAeAAYAAAABAAcAAAAeAAUAAAABAAcAAAAeAAQAAAABAAcAAAAeAAMAAAABAAcAAAAfAAMAAAABAAcAAAAfAAQAAAABAAcAAAAfAAUAAAABAAcAAAAfAAYAAAABAAcAAAAfAAcAAAABAAcAAAAfAAgAAAABAAcAAAAfAAkAAAABAAcAAAAgAAkAAAABAAcAAAAgAAgAAAABAAcAAAAgAAcAAAABAAcAAAAgAAYAAAABAAcAAAAgAAUAAAABAAcAAAAgAAQAAAABAAcAAAAgAAMAAAABAAcAAAAhAAMAAAABAAcAAAAhAAQAAAABAAcAAAAhAAUAAAABAAcAAAAhAAYAAAABAAcAAAAhAAcAAAABAAcAAAAhAAgAAAABAAcAAAAhAAkAAAABAAcAAAAiAAkAAAABAAcAAAAiAAgAAAABAAcAAAAiAAcAAAABAAcAAAAiAAYAAAABAAcAAAAiAAUAAAABAAcAAAAiAAQAAAABAAcAAAAiAAMAAAABAAcAAAAjAAMAAAABAAcAAAAjAAQAAAABAAcAAAAjAAUAAAABAAcAAAAjAAYAAAABAAcAAAAjAAcAAAABAAcAAAAjAAgAAAABAAcAAAAjAAkAAAABAAcAAAAkAAkAAAABAAcAAAAkAAgAAAABAAcAAAAkAAcAAAABAAcAAAAkAAYAAAABAAcAAAAkAAUAAAABAAcAAAAkAAQAAAABAAcAAAAkAAMAAAABAAcAAAAlAAMAAAABAAcAAAAlAAQAAAABAAcAAAAlAAUAAAABAAcAAAAlAAYAAAABAAcAAAAlAAcAAAABAAcAAAAlAAgAAAABAAcAAAAlAAkAAAABAAcAAAAmAAkAAAABAAcAAAAmAAgAAAABAAcAAAAmAAcAAAABAAcAAAAmAAYAAAABAAcAAAAmAAUAAAABAAcAAAAmAAQAAAABAAcAAAAmAAMAAAABAAcAAAAnAAMAAAABAAcAAAAnAAQAAAABAAcAAAAnAAUAAAABAAcAAAAnAAYAAAABAAcAAAAnAAcAAAABAAcAAAAnAAgAAAABAAcAAAAnAAkAAAABAAcAAAAoAAkAAAABAAcAAAAoAAgAAAABAAcAAAAoAAcAAAABAAcAAAAoAAYAAAABAAcAAAAoAAUAAAABAAcAAAAoAAQAAAABAAcAAAAoAAMAAAABAAcAAAApAAMAAAABAAcAAAApAAQAAAABAAcAAAApAAUAAAABAAcAAAApAAYAAAABAAcAAAApAAcAAAABAAcAAAApAAgAAAABAAcAAAApAAkAAAABAAcAAAAqAAkAAAABAAcAAAAqAAgAAAABAAcAAAAqAAcAAAABAAcAAAAqAAYAAAABAAcAAAAqAAUAAAABAAcAAAAqAAQAAAABAAcAAAAqAAMAAAABAAcAAAArAAMAAAABAAcAAAArAAQAAAABAAcAAAArAAUAAAABAAcAAAArAAYAAAABAAcAAAArAAcAAAABAAcAAAArAAgAAAABAAcAAAArAAkAAAABAAcAAAAsAAkAAAABAAcAAAAsAAgAAAABAAcAAAAsAAcAAAABAAcAAAAsAAYAAAABAAcAAAAsAAUAAAABAAcAAAAsAAQAAAABAAcAAAAsAAMAAAABAAcAAAAtAAMAAAABAAcAAAAtAAQAAAABAAcAAAAtAAUAAAABAAcAAAAtAAYAAAABAAcAAAAtAAcAAAABAAcAAAAtAAgAAAABAAcAAAAtAAkAAAABAAcAAAAuAAkAAAABAAcAAAAuAAgAAAABAAcAAAAuAAcAAAABAAcAAAAuAAYAAAABAAcAAAAuAAUAAAABAAcAAAAuAAQAAAABAAcAAAAuAAMAAAABAAcAAAAvAAMAAAABAAcAAAAvAAQAAAABAAcAAAAvAAUAAAABAAcAAAAvAAYAAAABAAcAAAAvAAcAAAABAAcAAAAvAAgAAAABAAcAAAAvAAkAAAABAAcAAAAXAA4AAAABAAcAAAAXAA8AAAABAAcAAAAXABAAAAABAAcAAAAXABEAAAABAAcAAAAWABEAAAABAAcAAAAWABIAAAABAAcAAAAWABMAAAABAAcAAAAXABMAAAABAAcAAAAXABIAAAABAAcAAAADAAkAAAABAAcAAAADAAgAAAABAAcAAAADAAcAAAABAAcAAAADAAYAAAABAAcAAAADAAUAAAABAAcAAAADAAQAAAABAAcAAAACAAQAAAABAAcAAAABAAQAAAABAAcAAAAAAAQAAAABAAcAAAAAAAUAAAABAAcAAAAAAAYAAAABAAcAAAAAAAcAAAABAAcAAAAAAAgAAAABAAcAAAAAAAkAAAABAAcAAAAAAAoAAAABAAcAAAAAAAsAAAABAAoAAAAAAAwAAAABAAcAAAAAAA0AAAABAAcAAAAAAA4AAAABAAcAAAAAAA8AAAABAAcAAAAAABAAAAABAAcAAAAAABEAAAABAAcAAAAAABIAAAABAAcAAAAAABMAAAABAAcAAAAAABQAAAABAAcAAAABABQAAAABAAcAAAABABMAAAABAAcAAAABABIAAAABAAcAAAABABEAAAABAAcAAAABABAAAAABAAcAAAABAA8AAAABAAcAAAABAA4AAAABAAcAAAABAA0AAAABAAcAAAABAAwAAAABAAcAAAABAAsAAAABAAcAAAABAAoAAAABAAcAAAABAAkAAAABAAcAAAABAAgAAAABAAcAAAABAAcAAAABAAcAAAABAAYAAAABAAcAAAABAAUAAAABAAcAAAACAAUAAAABAAcAAAACAAYAAAABAAcAAAACAAcAAAABAAcAAAACAAgAAAABAAcAAAACAAkAAAABAAcAAAACAAoAAAABAAcAAAACAAsAAAABAAcAAAACAAwAAAABAAcAAAACAA0AAAABAAcAAAACAA4AAAABAAcAAAACAA8AAAABAAcAAAACABAAAAABAAcAAAACABEAAAABAAcAAAACABIAAAABAAcAAAACABMAAAABAAcAAAACABQAAAABAAcAAAADABQAAAABAAcAAAADABMAAAABAAcAAAADABIAAAABAAcAAAADABEAAAABAAcAAAADABAAAAABAAcAAAADAA8AAAABAAcAAAADAA4AAAABAAcAAAADAA0AAAABAAcAAAADAAwAAAABAAcAAAADAAsAAAABAAcAAAADAAoAAAABAAcAAAAEAAoAAAABAAcAAAAEAAkAAAABAAcAAAAEAAgAAAABAAcAAAAEAAcAAAABAAcAAAAEAAYAAAABAAcAAAAEAAUAAAABAAcAAAAEAAQAAAABAAcAAAAFAAQAAAABAAcAAAAFAAUAAAABAAcAAAAFAAYAAAABAAcAAAAFAAcAAAABAAcAAAAFAAgAAAABAAcAAAAFAAkAAAABAAcAAAAFAAoAAAABAAcAAAAFAAsAAAABAAcAAAAEAAsAAAABAAcAAAAEAAwAAAABAAcAAAAEAA0AAAABAAcAAAAEAA4AAAABAAcAAAAEAA8AAAABAAcAAAAEABAAAAABAAcAAAAEABEAAAABAAcAAAAEABIAAAABAAcAAAAEABMAAAABAAcAAAAEABQAAAABAAcAAAAFABQAAAABAAcAAAAFABMAAAABAAcAAAAFABIAAAABAAcAAAAFABEAAAABAAcAAAAFABAAAAABAAcAAAAFAA8AAAABAAcAAAAFAA4AAAABAAcAAAAFAA0AAAABAAcAAAAFAAwAAAABAAcAAAAGAAwAAAABAAcAAAAGAAsAAAABAAcAAAAGAAoAAAABAAcAAAAGAAkAAAABAAcAAAAGAAgAAAABAAcAAAAGAAcAAAABAAcAAAAGAAYAAAABAAcAAAAGAAUAAAABAAcAAAAGAAQAAAABAAcAAAAGAA0AAAABAAcAAAAGAA4AAAABAAcAAAAGAA8AAAABAAcAAAAGABAAAAABAAcAAAAGABEAAAABAAcAAAAGABIAAAABAAcAAAAGABMAAAABAAcAAAAGABQAAAABAAcAAAAHABQAAAABAAcAAAAHABMAAAABAAcAAAAHABIAAAABAAcAAAAIABIAAAABAAcAAAAIABMAAAABAAcAAAAIABQAAAABAAcAAAAJABQAAAABAAcAAAAJABMAAAABAAcAAAAJABIAAAABAAcAAAAKABIAAAABAAcAAAAKABMAAAABAAcAAAAKABQAAAABAAcAAAALABQAAAABAAcAAAALABMAAAABAAcAAAALABIAAAABAAcAAAAMABIAAAABAAcAAAAMABMAAAABAAcAAAAMABQAAAABAAcAAAANABQAAAABAAcAAAANABMAAAABAAcAAAANABIAAAABAAcAAAAOABIAAAABAAcAAAAOABMAAAABAAcAAAAOABQAAAABAAcAAAAPABQAAAABAAcAAAAPABMAAAABAAcAAAAPABIAAAABAAcAAAAQABIAAAABAAcAAAAQABMAAAABAAcAAAAQABQAAAABAAcAAAApABMAAAABAAcAAAApABIAAAABAAcAAAApABEAAAABAAcAAAApABAAAAABAAcAAAApAA8AAAABAAcAAAApAA4AAAABAAcAAAApAA0AAAABAAcAAAApAAwAAAABAAcAAAApAAsAAAABAAcAAAAoAAsAAAABAAcAAAAnAAsAAAABAAcAAAAmAAsAAAABAAcAAAAlAAsAAAABAAcAAAAkAAsAAAABAAcAAAAjAAsAAAABAAcAAAAiAAsAAAABAAcAAAAhAAsAAAABAAcAAAAgAAsAAAABAAcAAAAfAAsAAAABAAcAAAAeAAsAAAABAAcAAAAdAAsAAAABAAcAAAAcAAsAAAABAAcAAAAbAAsAAAABAAcAAAAaAAsAAAABAAcAAAAZAAsAAAABAAcAAAAZAAwAAAABAAcAAAAZAA0AAAABAAcAAAAZAA4AAAABAAcAAAAZAA8AAAABAAcAAAAZABAAAAABAAcAAAAZABEAAAABAAcAAAAZABIAAAABAAcAAAAZABMAAAABAAcAAAAZABQAAAABAAcAAAAaABQAAAABAAcAAAAaABMAAAABAAcAAAAaABIAAAABAAcAAAAaABEAAAABAAcAAAAaABAAAAABAAcAAAAaAA8AAAABAAcAAAAaAA4AAAABAAcAAAAaAA0AAAABAAcAAAAaAAwAAAABAAcAAAAbAAwAAAABAAcAAAAbAA0AAAABAAcAAAAbAA4AAAABAAcAAAAbAA8AAAABAAcAAAAbABAAAAABAAcAAAAbABEAAAABAAcAAAAbABIAAAABAAcAAAAbABMAAAABAAcAAAAbABQAAAABAAcAAAAcABQAAAABAAcAAAAcABMAAAABAAcAAAAcABIAAAABAAcAAAAcABEAAAABAAcAAAAcABAAAAABAAcAAAAcAA8AAAABAAcAAAAcAA4AAAABAAcAAAAcAA0AAAABAAcAAAAcAAwAAAABAAcAAAAdAAwAAAABAAcAAAAeAAwAAAABAAcAAAAfAAwAAAABAAcAAAAgAAwAAAABAAcAAAAhAAwAAAABAAcAAAAiAAwAAAABAAcAAAAjAAwAAAABAAcAAAAkAAwAAAABAAcAAAAlAAwAAAABAAcAAAAmAAwAAAABAAcAAAAnAAwAAAABAAcAAAAnAA0AAAABAAcAAAAnAA4AAAABAAcAAAAnAA8AAAABAAcAAAAnABAAAAABAAcAAAAnABEAAAABAAcAAAAnABIAAAABAAcAAAAmABIAAAABAAcAAAAlABIAAAABAAcAAAAkABIAAAABAAcAAAAjABIAAAABAAcAAAAiABIAAAABAAcAAAAhABIAAAABAAcAAAAgABIAAAABAAcAAAAfABIAAAABAAcAAAAeABIAAAABAAcAAAAdABIAAAABAAcAAAAdABMAAAABAAcAAAAdABQAAAABAAcAAAAeABQAAAABAAcAAAAeABMAAAABAAcAAAAfABMAAAABAAcAAAAfABQAAAABAAcAAAAgABQAAAABAAcAAAAgABMAAAABAAcAAAAhABMAAAABAAcAAAAhABQAAAABAAcAAAAiABQAAAABAAcAAAAiABMAAAABAAcAAAAjABMAAAABAAcAAAAjABQAAAABAAcAAAAkABQAAAABAAcAAAAkABMAAAABAAcAAAAlABMAAAABAAcAAAAlABQAAAABAAcAAAAmABQAAAABAAcAAAAmABMAAAABAAcAAAAnABMAAAABAAcAAAAnABQAAAABAAcAAAAoABQAAAABAAcAAAAoABMAAAABAAcAAAAoABIAAAABAAcAAAAoABEAAAABAAcAAAAoABAAAAABAAcAAAAoAA8AAAABAAcAAAAoAA4AAAABAAcAAAAoAA0AAAABAAcAAAAoAAwAAAABAAcAAAApABQAAAABAAcAAAAqABQAAAABAAcAAAAqABMAAAABAAcAAAAqABIAAAABAAcAAAAqABEAAAABAAcAAAAqABAAAAABAAcAAAAqAA8AAAABAAcAAAAqAA4AAAABAAcAAAAqAA0AAAABAAcAAAAqAAwAAAABAAcAAAAqAAsAAAABAAcAAAArAAsAAAABAAcAAAArAAwAAAABAAcAAAArAA0AAAABAAcAAAArAA4AAAABAAcAAAArAA8AAAABAAcAAAArABAAAAABAAcAAAArABEAAAABAAcAAAArABIAAAABAAcAAAArABMAAAABAAcAAAArABQAAAABAAcAAAAsABQAAAABAAcAAAAsABMAAAABAAcAAAAsABIAAAABAAcAAAAsABEAAAABAAcAAAAsABAAAAABAAcAAAAsAA8AAAABAAcAAAAsAA4AAAABAAcAAAAsAA0AAAABAAcAAAAsAAwAAAABAAcAAAAsAAsAAAABAAcAAAAtAAsAAAABAAcAAAAtAAwAAAABAAcAAAAtAA0AAAABAAcAAAAtAA4AAAABAAcAAAAtAA8AAAABAAcAAAAtABAAAAABAAcAAAAtABEAAAABAAcAAAAtABIAAAABAAcAAAAtABMAAAABAAcAAAAtABQAAAABAAcAAAAuABQAAAABAAcAAAAuABMAAAABAAcAAAAuABIAAAABAAcAAAAuABEAAAABAAcAAAAuABAAAAABAAcAAAAuAA8AAAABAAcAAAAuAA4AAAABAAcAAAAuAA0AAAABAAcAAAAuAAwAAAABAAcAAAAuAAsAAAABAAcAAAAvAAsAAAABAAcAAAAvAAwAAAABAAcAAAAvAA0AAAABAAcAAAAvAA4AAAABAAcAAAAvAA8AAAABAAcAAAAvABAAAAABAAcAAAAvABEAAAABAAcAAAAvABIAAAABAAcAAAAvABMAAAABAAcAAAAvABQAAAABAAcAAAAAAAAAAAABAAcAAAAAAAEAAAABAAcAAAAAAAIAAAABAAcAAAABAAAAAAABAAcAAAABAAEAAAABAAcAAAABAAIAAAABAAcAAAACAAAAAAABAAcAAAACAAEAAAABAAcAAAACAAIAAAABAAcAAAADAAAAAAABAAcAAAADAAEAAAABAAcAAAADAAIAAAABAAcAAAAEAAAAAAABAAcAAAAEAAEAAAABAAcAAAAEAAIAAAABAAcAAAAFAAAAAAABAAcAAAAFAAEAAAABAAcAAAAFAAIAAAABAAcAAAAGAAAAAAABAAcAAAAGAAEAAAABAAcAAAAGAAIAAAABAAcAAAAHAAAAAAABAAcAAAAHAAEAAAABAAcAAAAHAAIAAAABAAcAAAAIAAAAAAABAAcAAAAIAAEAAAABAAcAAAAIAAIAAAABAAcAAAAJAAAAAAABAAcAAAAJAAEAAAABAAcAAAAJAAIAAAABAAcAAAAKAAAAAAABAAcAAAAKAAEAAAABAAcAAAAKAAIAAAABAAcAAAALAAAAAAABAAcAAAALAAEAAAABAAcAAAALAAIAAAABAAcAAAAMAAAAAAABAAcAAAAMAAEAAAABAAcAAAAMAAIAAAABAAcAAAANAAAAAAABAAcAAAANAAEAAAABAAcAAAANAAIAAAABAAcAAAAOAAAAAAABAAcAAAAOAAEAAAABAAcAAAAOAAIAAAABAAcAAAAPAAAAAAABAAcAAAAPAAEAAAABAAcAAAAPAAIAAAABAAcAAAAQAAAAAAABAAcAAAAQAAEAAAABAAcAAAAQAAIAAAABAAcAAAARAAAAAAABAAcAAAARAAEAAAABAAcAAAARAAIAAAABAAcAAAASAAAAAAABAAcAAAASAAEAAAABAAcAAAASAAIAAAABAAcAAAATAAAAAAABAAcAAAATAAEAAAABAAcAAAATAAIAAAABAAcAAAAUAAAAAAABAAcAAAAUAAEAAAABAAcAAAAUAAIAAAABAAcAAAAVAAAAAAABAAcAAAAVAAEAAAABAAcAAAAVAAIAAAABAAcAAAAWAAAAAAABAAcAAAAWAAEAAAABAAcAAAAWAAIAAAABAAcAAAAXAAAAAAABAAcAAAAXAAEAAAABAAcAAAAXAAIAAAABAAcAAAAYAAAAAAABAAcAAAAYAAEAAAABAAcAAAAYAAIAAAABAAcAAAAZAAAAAAABAAcAAAAZAAEAAAABAAcAAAAZAAIAAAABAAcAAAAaAAAAAAABAAcAAAAaAAEAAAABAAcAAAAaAAIAAAABAAcAAAAbAAAAAAABAAcAAAAbAAEAAAABAAcAAAAbAAIAAAABAAcAAAAcAAAAAAABAAcAAAAcAAEAAAABAAcAAAAcAAIAAAABAAcAAAAdAAAAAAABAAcAAAAdAAEAAAABAAcAAAAdAAIAAAABAAcAAAAeAAAAAAABAAcAAAAeAAEAAAABAAcAAAAeAAIAAAABAAcAAAAfAAAAAAABAAcAAAAfAAEAAAABAAcAAAAfAAIAAAABAAcAAAAgAAAAAAABAAcAAAAgAAEAAAABAAcAAAAgAAIAAAABAAcAAAAhAAAAAAABAAcAAAAhAAEAAAABAAcAAAAhAAIAAAABAAcAAAAiAAAAAAABAAcAAAAiAAEAAAABAAcAAAAiAAIAAAABAAcAAAAjAAAAAAABAAcAAAAjAAEAAAABAAcAAAAjAAIAAAABAAcAAAAkAAAAAAABAAcAAAAkAAEAAAABAAcAAAAkAAIAAAABAAcAAAAlAAAAAAABAAcAAAAlAAEAAAABAAcAAAAlAAIAAAABAAcAAAAmAAAAAAABAAcAAAAmAAEAAAABAAcAAAAmAAIAAAABAAcAAAAnAAAAAAABAAcAAAAnAAEAAAABAAcAAAAnAAIAAAABAAcAAAAoAAAAAAABAAcAAAAoAAEAAAABAAcAAAAoAAIAAAABAAcAAAApAAAAAAABAAcAAAApAAEAAAABAAcAAAApAAIAAAABAAcAAAAqAAAAAAABAAcAAAAqAAEAAAABAAcAAAAqAAIAAAABAAcAAAArAAAAAAABAAcAAAArAAEAAAABAAcAAAArAAIAAAABAAcAAAAsAAAAAAABAAcAAAAsAAEAAAABAAcAAAAsAAIAAAABAAcAAAAtAAAAAAABAAcAAAAtAAEAAAABAAcAAAAtAAIAAAABAAcAAAAuAAAAAAABAAcAAAAuAAEAAAABAAcAAAAuAAIAAAABAAcAAAAvAAAAAAABAAcAAAAvAAEAAAABAAcAAAAvAAIAAAABAAcAAAAAABUAAAABAAcAAAAAABYAAAABAAcAAAAAABcAAAABAAcAAAAAABgAAAABAAcAAAABABUAAAABAAcAAAABABYAAAABAAcAAAABABcAAAABAAcAAAABABgAAAABAAcAAAACABUAAAABAAcAAAACABYAAAABAAcAAAACABcAAAABAAcAAAACABgAAAABAAcAAAADABUAAAABAAcAAAADABYAAAABAAcAAAADABcAAAABAAcAAAADABgAAAABAAcAAAAEABUAAAABAAcAAAAEABYAAAABAAcAAAAEABcAAAABAAcAAAAEABgAAAABAAcAAAAFABUAAAABAAcAAAAFABYAAAABAAcAAAAFABcAAAABAAcAAAAFABgAAAABAAcAAAAGABUAAAABAAcAAAAGABYAAAABAAcAAAAGABcAAAABAAcAAAAGABgAAAABAAcAAAAHABUAAAABAAcAAAAHABYAAAABAAcAAAAHABcAAAABAAcAAAAHABgAAAABAAcAAAAIABUAAAABAAcAAAAIABYAAAABAAcAAAAIABcAAAABAAcAAAAIABgAAAABAAcAAAAJABUAAAABAAcAAAAJABYAAAABAAcAAAAJABcAAAABAAcAAAAJABgAAAABAAcAAAAKABUAAAABAAcAAAAKABYAAAABAAcAAAAKABcAAAABAAcAAAAKABgAAAABAAcAAAALABUAAAABAAcAAAALABYAAAABAAcAAAALABcAAAABAAcAAAALABgAAAABAAcAAAAMABUAAAABAAcAAAAMABYAAAABAAcAAAAMABcAAAABAAcAAAAMABgAAAABAAcAAAANABUAAAABAAcAAAANABYAAAABAAcAAAANABcAAAABAAcAAAANABgAAAABAAcAAAAOABUAAAABAAcAAAAOABYAAAABAAcAAAAOABcAAAABAAcAAAAOABgAAAABAAcAAAAPABUAAAABAAcAAAAPABYAAAABAAcAAAAPABcAAAABAAcAAAAPABgAAAABAAcAAAAQABUAAAABAAcAAAAQABYAAAABAAcAAAAQABcAAAABAAcAAAAQABgAAAABAAcAAAARABUAAAABAAcAAAARABYAAAABAAcAAAARABcAAAABAAcAAAARABgAAAABAAcAAAASABUAAAABAAcAAAASABYAAAABAAcAAAASABcAAAABAAcAAAASABgAAAABAAcAAAATABUAAAABAAcAAAATABYAAAABAAcAAAATABcAAAABAAcAAAATABgAAAABAAcAAAAUABUAAAABAAcAAAAUABYAAAABAAcAAAAUABcAAAABAAcAAAAUABgAAAABAAcAAAAVABUAAAABAAcAAAAVABYAAAABAAcAAAAVABcAAAABAAcAAAAVABgAAAABAAcAAAAWABUAAAABAAcAAAAWABYAAAABAAcAAAAWABcAAAABAAcAAAAWABgAAAABAAcAAAAXABUAAAABAAcAAAAXABYAAAABAAcAAAAXABcAAAABAAcAAAAXABgAAAABAAcAAAAYABUAAAABAAcAAAAYABYAAAABAAcAAAAYABcAAAABAAcAAAAYABgAAAABAAcAAAAZABUAAAABAAcAAAAZABYAAAABAAcAAAAZABcAAAABAAcAAAAZABgAAAABAAcAAAAaABUAAAABAAcAAAAaABYAAAABAAcAAAAaABcAAAABAAcAAAAaABgAAAABAAcAAAAbABUAAAABAAcAAAAbABYAAAABAAcAAAAbABcAAAABAAcAAAAbABgAAAABAAcAAAAcABUAAAABAAcAAAAcABYAAAABAAcAAAAcABcAAAABAAcAAAAcABgAAAABAAcAAAAdABUAAAABAAcAAAAdABYAAAABAAcAAAAdABcAAAABAAcAAAAdABgAAAABAAcAAAAeABUAAAABAAcAAAAeABYAAAABAAcAAAAeABcAAAABAAcAAAAeABgAAAABAAcAAAAfABUAAAABAAcAAAAfABYAAAABAAcAAAAfABcAAAABAAcAAAAfABgAAAABAAcAAAAgABUAAAABAAcAAAAgABYAAAABAAcAAAAgABcAAAABAAcAAAAgABgAAAABAAcAAAAhABUAAAABAAcAAAAhABYAAAABAAcAAAAhABcAAAABAAcAAAAhABgAAAABAAcAAAAiABUAAAABAAcAAAAiABYAAAABAAcAAAAiABcAAAABAAcAAAAiABgAAAABAAcAAAAjABUAAAABAAcAAAAjABYAAAABAAcAAAAjABcAAAABAAcAAAAjABgAAAABAAcAAAAkABUAAAABAAcAAAAkABYAAAABAAcAAAAkABcAAAABAAcAAAAkABgAAAABAAcAAAAlABUAAAABAAcAAAAlABYAAAABAAcAAAAlABcAAAABAAcAAAAlABgAAAABAAcAAAAmABUAAAABAAcAAAAmABYAAAABAAcAAAAmABcAAAABAAcAAAAmABgAAAABAAcAAAAnABUAAAABAAcAAAAnABYAAAABAAcAAAAnABcAAAABAAcAAAAnABgAAAABAAcAAAAoABUAAAABAAcAAAAoABYAAAABAAcAAAAoABcAAAABAAcAAAAoABgAAAABAAcAAAApABUAAAABAAcAAAApABYAAAABAAcAAAApABcAAAABAAcAAAApABgAAAABAAcAAAAqABUAAAABAAcAAAAqABYAAAABAAcAAAAqABcAAAABAAcAAAAqABgAAAABAAcAAAArABUAAAABAAcAAAArABYAAAABAAcAAAArABcAAAABAAcAAAArABgAAAABAAcAAAAsABUAAAABAAcAAAAsABYAAAABAAcAAAAsABcAAAABAAcAAAAsABgAAAABAAcAAAAtABUAAAABAAcAAAAtABYAAAABAAcAAAAtABcAAAABAAcAAAAtABgAAAABAAcAAAAuABUAAAABAAcAAAAuABYAAAABAAcAAAAuABcAAAABAAcAAAAuABgAAAABAAcAAAAvABUAAAABAAcAAAAvABYAAAABAAcAAAAvABcAAAABAAcAAAAvABgAAAABAAcAAAAAABkAAAABAAoAAAAAABoAAAABAAoAAAABABkAAAABAAoAAAABABoAAAABAAoAAAACABkAAAABAAoAAAACABoAAAABAAoAAAADABkAAAABAAoAAAADABoAAAABAAoAAAAEABkAAAABAAoAAAAEABoAAAABAAoAAAAFABkAAAABAAoAAAAFABoAAAABAAoAAAAGABkAAAABAAoAAAAGABoAAAABAAoAAAAHABkAAAABAAoAAAAHABoAAAABAAoAAAAIABkAAAABAAoAAAAIABoAAAABAAoAAAAJABkAAAABAAoAAAAJABoAAAABAAoAAAAKABkAAAABAAoAAAAKABoAAAABAAoAAAALABkAAAABAAoAAAALABoAAAABAAoAAAAMABkAAAABAAoAAAAMABoAAAABAAoAAAANABkAAAABAAoAAAANABoAAAABAAoAAAAOABkAAAABAAoAAAAOABoAAAABAAoAAAAPABkAAAABAAoAAAAPABoAAAABAAoAAAAQABkAAAABAAoAAAAQABoAAAABAAoAAAARABkAAAABAAoAAAARABoAAAABAAoAAAASABkAAAABAAoAAAASABoAAAABAAoAAAATABkAAAABAAoAAAATABoAAAABAAoAAAAUABkAAAABAAoAAAAUABoAAAABAAoAAAAVABkAAAABAAoAAAAVABoAAAABAAoAAAAWABkAAAABAAoAAAAWABoAAAABAAoAAAAXABkAAAABAAoAAAAXABoAAAABAAoAAAAYABkAAAABAAoAAAAYABoAAAABAAoAAAAZABkAAAABAAoAAAAZABoAAAABAAoAAAAaABkAAAABAAoAAAAaABoAAAABAAoAAAAbABkAAAABAAoAAAAbABoAAAABAAoAAAAcABkAAAABAAoAAAAcABoAAAABAAoAAAAdABkAAAABAAoAAAAdABoAAAABAAoAAAAeABkAAAABAAoAAAAeABoAAAABAAoAAAAfABkAAAABAAoAAAAfABoAAAABAAoAAAAgABkAAAABAAoAAAAgABoAAAABAAoAAAAhABkAAAABAAoAAAAhABoAAAABAAoAAAAiABkAAAABAAoAAAAiABoAAAABAAoAAAAjABkAAAABAAoAAAAjABoAAAABAAoAAAAkABkAAAABAAoAAAAkABoAAAABAAoAAAAlABkAAAABAAoAAAAlABoAAAABAAoAAAAmABkAAAABAAoAAAAmABoAAAABAAoAAAAnABkAAAABAAoAAAAnABoAAAABAAoAAAAoABkAAAABAAoAAAAoABoAAAABAAoAAAApABkAAAABAAoAAAApABoAAAABAAoAAAAqABkAAAABAAoAAAAqABoAAAABAAoAAAArABkAAAABAAoAAAArABoAAAABAAoAAAAsABkAAAABAAoAAAAsABoAAAABAAoAAAAtABkAAAABAAoAAAAtABoAAAABAAoAAAAuABkAAAABAAoAAAAuABoAAAABAAoAAAAvABkAAAABAAoAAAAvABoAAAABAAoAAAA=")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_path")

[node name="Towers" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="WaveManager" type="Node" parent="." node_paths=PackedStringArray("path_2d")]
script = ExtResource("3_wave")
path_2d = NodePath("../Path2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_hud")

[node name="TopPanel" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="CanvasLayer/HUD/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MoneyLabel" type="Label" parent="CanvasLayer/HUD/TopPanel/HBox"]
layout_mode = 2
text = "Money: $450"

[node name="LivesLabel" type="Label" parent="CanvasLayer/HUD/TopPanel/HBox"]
layout_mode = 2
text = "Lives: 20"

[node name="WaveLabel" type="Label" parent="CanvasLayer/HUD/TopPanel/HBox"]
layout_mode = 2
text = "Wave: 1"

[node name="BottomPanel" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="CanvasLayer/HUD/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BuildLaser" type="Button" parent="CanvasLayer/HUD/BottomPanel/HBox"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
text = "Laser ($100)"
expand_icon = true

[node name="BuildCannon" type="Button" parent="CanvasLayer/HUD/BottomPanel/HBox"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
text = "Cannon ($250)"
expand_icon = true

[node name="BuildSlow" type="Button" parent="CanvasLayer/HUD/BottomPanel/HBox"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
text = "Slow ($150)"
expand_icon = true

[node name="BuildSniper" type="Button" parent="CanvasLayer/HUD/BottomPanel/HBox"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
text = "Sniper ($400)"
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/HUD/BottomPanel/HBox"]
layout_mode = 2

[node name="NextWaveBtn" type="Button" parent="CanvasLayer/HUD/BottomPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -50.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Next Wave"

[node name="SpeedBtn" type="Button" parent="CanvasLayer/HUD/BottomPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = 90.0
offset_bottom = -10.0
grow_vertical = 0
text = "1x Speed"

[node name="TowerControlPanel" type="Panel" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -100.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/HUD/TowerControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="InfoLabel" type="Label" parent="CanvasLayer/HUD/TowerControlPanel/VBox"]
layout_mode = 2
text = "Info"
autowrap_mode = 3

[node name="UpgradeBtn" type="Button" parent="CanvasLayer/HUD/TowerControlPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Upgrade"

[node name="SellBtn" type="Button" parent="CanvasLayer/HUD/TowerControlPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Sell"

[connection signal="build_tower_requested" from="CanvasLayer/HUD" to="." method="_on_build_requested"]
[connection signal="sell_tower_requested" from="CanvasLayer/HUD" to="." method="_on_sell_tower"]
[connection signal="upgrade_tower_requested" from="CanvasLayer/HUD" to="." method="_on_upgrade_tower"]
[connection signal="pressed" from="CanvasLayer/HUD/BottomPanel/HBox/BuildLaser" to="CanvasLayer/HUD" method="_on_build_laser_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/BottomPanel/HBox/BuildCannon" to="CanvasLayer/HUD" method="_on_build_cannon_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/BottomPanel/HBox/BuildSlow" to="CanvasLayer/HUD" method="_on_build_slow_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/BottomPanel/HBox/BuildSniper" to="CanvasLayer/HUD" method="_on_build_sniper_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/BottomPanel/NextWaveBtn" to="CanvasLayer/HUD" method="_on_next_wave_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/BottomPanel/SpeedBtn" to="CanvasLayer/HUD" method="_on_speed_toggle"]
[connection signal="pressed" from="CanvasLayer/HUD/TowerControlPanel/VBox/UpgradeBtn" to="CanvasLayer/HUD" method="_on_upgrade_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/TowerControlPanel/VBox/SellBtn" to="CanvasLayer/HUD" method="_on_sell_pressed"]
